Loading spinner added

--- a/src/app/coin/coin-detail/coin-detail.component.html
+++ b/src/app/coin/coin-detail/coin-detail.component.html
@@ -1,3 +1,6 @@
-<p>
+<p *ngIf="coin$ | async; else loading">
   {{coin$ | async | json}}
 </p>
+<ng-template #loading>
+  <ion-spinner></ion-spinner>
+</ng-template>
