--- a/src/app/coin/coin-list/coin-list.component.scss
+++ b/src/app/coin/coin-list/coin-list.component.scss
@@ -7,3 +7,12 @@
 :host{
 	padding-top: 60px;
 }
+
+ion-item {
+	border-bottom: 1px solid #eee;
+}
+
+ion-spinner {
+	width: 100%;
+	height: 100%;
+}
