--- a/src/app/coin/coin-list/coin-list.component.html
+++ b/src/app/coin/coin-list/coin-list.component.html
@@ -1,4 +1,4 @@
-<ion-content class="content">
+<ion-content class="content" *ngIf="coins$ | async; else loading">
 	<ion-list>
 		<ion-item *ngFor="let coin of (coins$ | async)" [routerLink]="['..','detail', coin.id]">
 			<ion-icon name="logo-bitcoin" slot="start"></ion-icon>
@@ -10,3 +10,7 @@
 		</ion-item>
 	</ion-list>
 </ion-content>
+
+<ng-template #loading>
+	<ion-spinner name="lines"></ion-spinner>
+</ng-template>
